# fastx

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: count_seqs.rs
src/: errors.rs  lib.rs  reader.rs  seq.rs  util.rs  xopen.rs
