[package]
authors = ["Wei Shen <shenwei356@gmail.com>"]
name = "fastx"
version = "0.1.0"
edition = "2024"
description = "fastx is a Rust crate for parsing and writing FASTA/Q sequences"
keywords = ["bioinformatics", "fasta", "fastq"]
categories = ["command-line-utilities", "science"]
homepage = "https://github.com/shenwei356/fastx"
documentation = "https://github.com/shenwei356/fastx"
repository = "https://github.com/shenwei356/fastx"
readme = "README.md"

[dependencies]
buffer-redux = "1"
bzip2 = "0.6"
flate2 = "1"
liblzma = "0.3"
memchr = "2"
thiserror = "2.0.17"
zstd = "0.13"
